2011-03-31  Ian Piumarta  <piumarta@freebsd.piumarta.com>

	* vm/sqUnixExternalPrims.c: Resolve symbols eagerly on FreeBSD.

	* vm-display-X11/sqUnixX11.c (initPixmap): Remove reference to undefined function "error".

2011-03-30  Ian Piumarta  <piumarta@freebsd.piumarta.com>

	* plugins/FloatMathPlugin/config.cmake: Re-enable GCC optimisations.

	* vm/sqUnixExternalPrims.c: Resolve symbols lazily on FreeBSD.

2011-03-14  Ian Piumarta  <com -dot- gmail -at- piumarta (backwards)>

	* plugins/SerialPlugin/sqUnixSerial.c (portOpenFailed): Ensure
	descriptor closed properly if failure during port initialisation.
	Never allow more than MAX_SERIAL_PORTS to be open at once.

2011-02-16  Ian Piumarta  <com -dot- gmail -at- piumarta (backwards)>

	* plugins/UUIDPlugin/sqUnixUUID.c (sqUUIDInit): Fail plugin
	initialisation if using uuid_generate() causes SIGSEGV.

2011-01-29  Ian Piumarta  <com -dot- gmail -at- piumarta (backwards)>

	* plugins/UUIDPlugin/sqUnixUUID.c (MakeUUID): NetBSD and FreeBSD
	use uuidgen(), others use uuid_generate().

2011-01-27  Ian Piumarta  <com -dot- gmail -at- piumarta (backwards)>

	* cmake/Plugins.cmake: Append ${plugin}_extra_sources to
	automatically-generated plugin source list.

	* plugins/Mpeg3Plugin/config.cmake: Disable pthreads unconditionally.
	Add mpeg library files to plugin_extra_sources.

2011-01-24  Ian Piumarta  <com -dot- gmail -at- piumarta (backwards)>

	* vm/sqUnixMain.c (sqGetFilenameFromString): Handle relative symlinks properly.

2011-01-23  Ian Piumarta  <com -dot- gmail -at- piumarta (backwards)>

	* plugins/UUIDPlugin/sqUnixUUID.c (MakeUUID): NetBSD has
	uuidgen() not uuid_generate().

	* vm-display-X11/config.cmake: Use configured variable
	X11_Xrender_LIB in link libraries list.

	* plugins/FloatMathPlugin/config.cmake: Set LIBM_CFLAGS to disable GNUCC optimisation.

	* plugins/FloatMathPlugin/build.cmake: Set CFLAGS to LIBM_CFLAGS for this target only.
